fix: frontend: wrong colors for page separator

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -87,7 +87,7 @@ button {
     cursor: pointer;
 }
 button.toggled {
-    filter: brightness(.6);
+    filter: brightness(.8);
 }
 button, .breadcrumb { /* consistent focus color */
     &:focus-visible {
@@ -219,11 +219,10 @@ ul.dir {
                 top: -1.5em;
                 width: 50%;
                 padding-left: 50%;
-                background: var(--bg);
-                background: linear-gradient(0deg, var(--bg) 40%, var(--button-bg) 50%, var(--bg) 60%);
+                background: linear-gradient(0deg, var(--bg) 40%, var(--button-bg) 40%, var(--bg) 50%);
                 font-size: smaller;
                 margin-left: -0.3em;
-                filter: brightness(.7);
+                opacity: .8;
                 text-shadow: 0 0 6px var(--bg);
             }
         }
